--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,5 @@
     "default_title": "Session Quicksave",
     "default_popup": "src/popup/popup.html"
   },
-  "permissions": [],
-  "content_security_policy": "script-src 'self' 'unsafe-eval' object-src 'self'"
+  "permissions": []
 }
