--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "dependencies": {
     "date-fns": "^2.12.0"
   },
-  "description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)"
+  "description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "rollup": "^2.6.1",
+    "rollup-plugin-chrome-extension": "^2.2.0"
+  }
 }
