--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
     "32": "assets/img/icon-32.png"
   },
   "background": {
-    "page": "background/background.html",
+    "scripts": ["background/background.js"],
     "persistent": true
   },
   "browser_action": {
@@ -15,8 +15,7 @@
       "16": "assets/img/icon-16.png",
       "32": "assets/img/icon-32.png"
     },
-    "default_title": "Session Quicksave",
-    "default_popup": "popup/popup.html"
+    "default_title": "Session Quicksave"
   },
   "permissions": ["storage", "activeTab", "tabs"]
 }
