--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "rollup -c -w"
   },
   "dependencies": {
+    "@types/chrome": "0.0.104",
     "date-fns": "^2.12.0"
   },
   "description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
