--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,5 +16,6 @@
 			"32": "assets/img/icon-32.png"
 		},
 		"default_title": "Session Quicksave"
-	}
+	},
+	"web_accessible_resources": ["assets/img/icon-512.png"]
 }
