update web accessible resources in manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,5 +17,5 @@
 		},
 		"default_title": "Session Quicksave"
 	},
-	"web_accessible_resources": ["assets/img/icon-512.png"]
+	"web_accessible_resources": ["assets/icons/*.png", "assets/img/*.png"]
 }
