add permissions back to the manifest, since chrome extension rollup plugin misses tabs permission

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,5 +17,6 @@
 		},
 		"default_title": "Session Quicksave"
 	},
-	"web_accessible_resources": ["assets/icons/*.png", "assets/img/*.png"]
+	"web_accessible_resources": ["assets/icons/*.png", "assets/img/*.png"],
+	"permissions": ["bookmarks", "notifications", "storage", "tabs"]
 }
