--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^11.1.0",
 		"@rollup/plugin-node-resolve": "^7.1.3",
+		"@rollup/plugin-typescript": "^4.1.1",
 		"rollup": "^2.6.1",
 		"rollup-plugin-chrome-extension": "^2.2.0",
 		"rollup-plugin-copy2": "^0.1.3",
-		"rollup-plugin-zip": "^1.0.0"
+		"rollup-plugin-zip": "^1.0.0",
+		"tslib": "^1.11.1",
+		"typescript": "^3.8.3"
 	}
 }
