--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"rollup": "^2.6.1",
 		"rollup-plugin-chrome-extension": "^2.2.0",
 		"rollup-plugin-copy2": "^0.1.3",
+		"rollup-plugin-postcss": "^2.8.1",
 		"rollup-plugin-zip": "^1.0.0",
 		"tslib": "^1.11.1",
 		"typescript": "^3.8.3"
