add new options.html file and include it in manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,7 @@
 		},
 		"default_title": "Session Quicksave"
 	},
+	"options_page": "pages/options/options.html",
 	"web_accessible_resources": [
 		"assets/icons/*.png",
 		"assets/img/*.png",
