--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 	},
 	"dependencies": {
 		"@types/chrome": "0.0.104",
-		"date-fns": "^2.12.0"
+		"@types/react-dom": "^16.9.6",
+		"date-fns": "^2.12.0",
+		"react": "npm:@pika/react@^16.13.1",
+		"react-dom": "npm:@pika/react-dom@^16.13.1"
 	},
 	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
 	"devDependencies": {
