--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"watch": "rollup -c -w"
 	},
 	"dependencies": {
+		"@material-ui/core": "^4.9.11",
 		"@types/chrome": "0.0.104",
 		"@types/react-dom": "^16.9.6",
 		"date-fns": "^2.12.0",
