--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,5 +29,6 @@
 		"assets/img/*.png",
 		"assets/error-htmls/illegal-or-missing-url.html"
 	],
-	"permissions": ["bookmarks", "notifications", "storage", "tabs"]
+	"permissions": ["bookmarks", "notifications", "storage", "tabs"],
+	"content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; object-src 'self'"
 }
