--- a/package.json
+++ b/package.json
@@ -7,23 +7,15 @@
 		"watch": "rollup -c -w"
 	},
 	"dependencies": {
-		"@types/chrome": "0.0.104",
-		"@types/react-dom": "^16.9.6",
-		"date-fns": "^2.12.0",
-		"react": "npm:@pika/react@^16.13.1",
-		"react-dom": "npm:@pika/react-dom@^16.13.1"
+		"@ionic/core": "^5.1.1",
+		"date-fns": "^2.14.0",
+		"ionicons": "^5.0.1"
 	},
 	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^11.1.0",
-		"@rollup/plugin-node-resolve": "^7.1.3",
-		"@rollup/plugin-typescript": "^4.1.1",
-		"rollup": "^2.6.1",
-		"rollup-plugin-chrome-extension": "^2.2.0",
-		"rollup-plugin-copy2": "^0.1.3",
-		"rollup-plugin-empty-dir": "^1.0.4",
-		"rollup-plugin-postcss": "^2.8.1",
-		"rollup-plugin-zip": "^1.0.0",
+		"@stencil/core": "^1.14.0",
+		"@stencil/router": "^1.0.1",
+		"@types/chrome": "0.0.114",
 		"tslib": "^1.11.1",
 		"typescript": "^3.9.3"
 	}
