--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
 	"name": "Session Quicksave",
 	"homepage_url": "https://github.com/bjesuiter/chrome-session-quicksave",
 	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
+	"manifest_version": 2,
 	"icons": {
 		"16": "assets/img/icon-16.png",
 		"32": "assets/img/icon-32.png",
