--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
 ## Custom Ignores ##
 dist
-build 
+build
+
+## Stencil JS Gitignores ##
+dist/
+!www/favicon.ico
+www/
+
+*~
+*.sw[mnpcod]
+*.log
+*.lock
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+
+.stencil/
+.idea/
+.vscode/
+.sass-cache/
+.versions/
+node_modules/
+$RECYCLE.BIN/
+
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
+.env
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
