change html file which will be loaded as options page

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,7 +24,7 @@
 		},
 		"default_title": "Session Quicksave"
 	},
-	"options_page": "pages/options/options.html",
+	"options_page": "options.page.html",
 	"web_accessible_resources": [
 		"assets/icons/*.png",
 		"assets/img/*.png",
