--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "chrome-session-quicksave",
+	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
 	"version": "0.2.0",
 	"private": true,
 	"scripts": {
-    "build": "run-s build:stencil postbuild:add-version-to-manifest",
+		"build": "run-s build:stencil build:chrome postbuild:add-version-to-manifest",
     "build:stencil": "stencil build",
+    "build:chrome": "tsc -p tsconfig.chrome.json",
 		"start": "stencil build --dev --watch --serve",
 		"test": "stencil test --spec --e2e",
 		"test.watch": "stencil test --spec --e2e --watchAll",
@@ -16,7 +18,6 @@
 		"date-fns": "^2.14.0",
 		"ionicons": "^5.0.1"
 	},
-	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
 	"devDependencies": {
 		"@stencil/core": "^1.14.0",
 		"@stencil/router": "^1.0.1",
