add @lib ts path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "baseUrl": "./",
+    "paths": {
+      "@lib/*": [
+        "src/lib/*"
+      ]
+    }
   },
   "include": [
     "src"
