add correct options for compiling /src/chrome dir

--- a/tsconfig.chrome.json
+++ b/tsconfig.chrome.json
@@ -2,9 +2,10 @@
 {
   "extends": "./tsconfig.json",
   "include": [
-    "src/assets/chrome"
+    "src/chrome"
   ],
   "compilerOptions": {
-    "outDir": "./www"
+    "rootDir": "src",
+    "outDir": "www"
   }
 }
