--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,8 +14,8 @@
 		"512": "assets/img/icon-512.png"
 	},
 	"background": {
-		"scripts": ["/chrome/background.js"],
-		"persistent": true
+		"scripts": ["/build/app.js"],
+		"persistent": false
 	},
 	"browser_action": {
 		"default_icon": {
