--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"npm-run-all": "^4.1.5",
 		"tslib": "^2.0.0",
 		"typescript": "^3.9.5",
+		"workbox-build": "4.3.1",
 		"write-json-file": "^4.3.0"
 	},
 	"license": "MIT"
