add unsafe eval to manifest to allow lazy loaded components

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,5 +31,5 @@
 		"assets/error-htmls/illegal-or-missing-url.html"
 	],
 	"permissions": ["bookmarks", "notifications", "storage", "tabs"],
-	"content_security_policy": "script-src 'self' ; object-src 'self'"
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
