--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@stencil/core": "^1.14.0",
 		"@stencil/router": "^1.0.1",
 		"@types/chrome": "0.0.114",
+		"@types/jest": "^26.0.15",
 		"esm": "^3.2.25",
 		"load-json-file": "^6.2.0",
 		"npm-run-all": "^4.1.5",
