add another tspath alias

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,9 @@
     "paths": {
       "@lib/*": [
         "src/lib/*"
+      ],
+      "@models/*": [
+        "src/models/*"
       ]
     },
     "outDir": "www"
