add another tsconfig path alias in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "paths": {
       "@lib/*": [
         "src/lib/*"
+      ],
+      "@models/*": [
+        "src/models/*"
       ]
     },
     "outDir": "www"
