--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"jest": "^26.6.3",
 		"load-json-file": "^6.2.0",
 		"npm-run-all": "^4.1.5",
+		"prettier": "^2.1.2",
 		"tslib": "^2.0.0",
 		"typescript": "^3.9.5",
 		"workbox-build": "4.3.1",
