--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Session Quicksave",
 	"homepage_url": "https://github.com/bjesuiter/chrome-session-quicksave",
 	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"icons": {
 		"16": "assets/img/icon-16.png",
 		"32": "assets/img/icon-32.png",
@@ -14,10 +14,9 @@
 		"512": "assets/img/icon-512.png"
 	},
 	"background": {
-		"scripts": ["/build/app.js"],
-		"persistent": false
+		"service_worker": "/background.worker.js"
 	},
-	"browser_action": {
+	"action": {
 		"default_icon": {
 			"16": "assets/img/icon-16.png",
 			"32": "assets/img/icon-32.png"
@@ -26,10 +25,14 @@
 	},
 	"options_page": "index.html",
 	"web_accessible_resources": [
-		"assets/icons/*.png",
-		"assets/img/*.png",
-		"assets/error-htmls/illegal-or-missing-url.html"
+		{
+			"resources": [
+				"assets/icons/*.png",
+				"assets/img/*.png",
+				"assets/error-htmls/illegal-or-missing-url.html"
+			],
+			"extension_ids": ["fnkohghmlhjonhifnakaejendkgfkbeg", "loiabeejejifdcmmlojhlcoloakkcmnc"]
+		}
 	],
-	"permissions": ["bookmarks", "notifications", "storage", "tabs"],
-	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+	"permissions": ["bookmarks", "notifications", "storage", "tabs"]
 }
