install react, react-dom, react typings, react-dom typings, @snowpack/plugin-react-refresh, @snowpack/plugin-typescript

--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
 		"@ionic/core": "^5.1.1",
 		"date-fns": "^2.14.0",
 		"ionicons": "^5.0.1",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
 		"serializr": "^2.0.3",
 		"typescript-bundle": "^1.0.16"
 	},
 	"devDependencies": {
+		"@snowpack/plugin-react-refresh": "^2.3.9",
+		"@snowpack/plugin-typescript": "^1.1.1",
 		"@stencil/core": "^1.14.0",
 		"@stencil/router": "^1.0.1",
 		"@types/chrome": "0.0.127",
 		"@types/jest": "^26.0.19",
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
 		"bestzip": "^2.1.7",
 		"esm": "^3.2.25",
 		"jest": "^26.6.3",
