--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,33 @@
+// tsconfig for snowpack
 {
-  "extends": "./tsconfig.base.json",
+  "include": [
+    "types",
+    "projects/options-page/src",
+    "projects/background-script",
+  ],
   "compilerOptions": {
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "jsx": "preserve",
     "baseUrl": "./",
+    /* paths - If you configure Snowpack import aliases, add them here. */
     "paths": {
       "@lib/*": [
-        "src/lib/*"
+        "projects/lib/*"
       ],
-      "@models/*": [
-        "src/models/*"
+      "@options-page/*": [
+        "projects/options-page/src/*"
       ]
     },
-    "outDir": "www"
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    /* noEmit - Snowpack builds (emits) files, not tsc. */
+    "noEmit": true,
+    /* Additional Options */
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "importsNotUsedAsValues": "error"
+  }
 }
