remove old stencil modules

--- a/package.json
+++ b/package.json
@@ -18,19 +18,14 @@
 	"dependencies": {
 		"@bjesuiter/serializr-helpers": "^2.2.1",
 		"@datorama/akita": "^5.2.5",
-		"@ionic/core": "^5.1.1",
 		"date-fns": "^2.14.0",
-		"ionicons": "^5.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"serializr": "^2.0.3",
-		"typescript-bundle": "^1.0.16"
+		"serializr": "^2.0.3"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-react-refresh": "^2.3.9",
 		"@snowpack/plugin-typescript": "^1.1.1",
-		"@stencil/core": "^1.14.0",
-		"@stencil/router": "^1.0.1",
 		"@types/chrome": "0.0.127",
 		"@types/jest": "^26.0.19",
 		"@types/react": "^17.0.0",
@@ -42,9 +37,7 @@
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.2.1",
 		"snowpack": "^2.18.5",
-		"tslib": "^2.0.0",
 		"typescript": "^3.9.5",
-		"workbox-build": "4.3.1",
 		"write-json-file": "^4.3.0"
 	},
 	"license": "MIT"
