--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
 	},
 	"dependencies": {
 		"@bjesuiter/serializr-helpers": "^2.2.1",
-		"@datorama/akita": "^5.2.5",
-		"date-fns": "^2.14.0",
+		"@datorama/akita": "^5.3.0",
+		"date-fns": "^2.16.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"serializr": "^2.0.3"
+		"serializr": "^2.0.5"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-react-refresh": "^2.3.9",
@@ -37,7 +37,8 @@
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.2.1",
 		"snowpack": "^2.18.5",
-		"typescript": "^3.9.5",
+		"tslib": "^1.14.1",
+		"typescript": "^4.1.3",
 		"write-json-file": "^4.3.0"
 	},
 	"license": "MIT"
