update prettier config

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,7 +1,7 @@
 # Using Yaml to be able to use comments :)
 # Source Gist: https://gist.github.com/bjesuiter/97e2cc820804003090d51e9656151062
 trailingComma: "es5"
-printWidth: 100
+printWidth: 80
 tabWidth: 2
 useTabs: true
 singleQuote: true
@@ -11,10 +11,11 @@ semi: true
 quoteProps: "consistent"
 endOfLine: "auto"
 
-overrides:
-  - files:
-      - "*.scss"
-      - "*.css"
-      - "*.yaml"
-    options:
-      singleQuote: false
+# If option overrides are needed, example:
+#overrides:
+#  - files:
+#      - "*.scss"
+#      - "*.css"
+#      - "*.yaml"
+#    options:
+#      singleQuote: false
