change project structures to be more consistent

--- a/webroot/assets/manifest.json
+++ b/webroot/assets/manifest.json
@@ -4,18 +4,17 @@
 	"description": "A Chrome extension for quickly saving all open tabs inside a window into the browser bookmarks (with some configurability)",
 	"manifest_version": 2,
 	"icons": {
-		"16": "assets/img/icon-16.png",
-		"32": "assets/img/icon-32.png",
-		"48": "assets/img/icon-48.png",
-		"56": "assets/img/icon-56.png",
-		"64": "assets/img/icon-64.png",
-		"128": "assets/img/icon-128.png",
-		"256": "assets/img/icon-256.png",
-		"512": "assets/img/icon-512.png"
+		"16": "/assets/img/icon-16.png",
+		"32": "/assets/img/icon-32.png",
+		"48": "/assets/img/icon-48.png",
+		"56": "/assets/img/icon-56.png",
+		"64": "/assets/img/icon-64.png",
+		"128": "/assets/img/icon-128.png",
+		"256": "/assets/img/icon-256.png",
+		"512": "/assets/img/icon-512.png"
 	},
 	"background": {
-		"scripts": ["/build/app.js"],
-		"persistent": false
+		"page": "background.html"
 	},
 	"browser_action": {
 		"default_icon": {
@@ -24,7 +23,7 @@
 		},
 		"default_title": "Session Quicksave"
 	},
-	"options_page": "index.html",
+	"options_page": "options.html",
 	"web_accessible_resources": [
 		"assets/icons/*.png",
 		"assets/img/*.png",
