--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@bjesuiter/serializr-helpers": "^2.2.1",
 		"@datorama/akita": "^5.3.0",
+		"@material-ui/core": "^4.11.2",
 		"date-fns": "^2.16.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
