--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "snowpack dev",
 		"build": "snowpack build",
 		"build:clean": "snowpack build --clean",
+		"build:watch": "chokidar \"projects/*\"  \"webroot/*\" -c \"npm run build\"",
 		"postbuild": "run-s add-version-to-manifest",
 		"generate-dist-zip": "run-s build:clean zip:dist",
 		"add-version-to-manifest": "node -r esm dev-scripts/add-version-to-manifest.js",
@@ -16,6 +17,7 @@
 		"@bjesuiter/serializr-helpers": "^2.2.1",
 		"@datorama/akita": "^5.3.0",
 		"@material-ui/core": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.57",
 		"date-fns": "^2.16.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
@@ -30,6 +32,7 @@
 		"@types/react-dom": "^17.0.0",
 		"@types/snowpack-env": "^2.3.3",
 		"bestzip": "^2.1.7",
+		"chokidar-cli": "^2.1.0",
 		"esm": "^3.2.25",
 		"jest": "^26.6.3",
 		"load-json-file": "^6.2.0",
