--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "snowpack build",
 		"build:clean": "snowpack build --clean",
 		"build:watch": "chokidar \"projects/**/*\"  \"webroot/**/*\" -c \"npm run build\"",
-		"postbuild": "run-s add-version-to-manifest",
+		"postbuild": "run-s add-version-to-manifest echo:finished",
+		"echo:finished": "echo 'Build finished!'",
 		"generate-dist-zip": "run-s build:clean zip:dist",
 		"add-version-to-manifest": "node -r esm dev-scripts/add-version-to-manifest.js",
 		"zip:dist": "bestzip deploy.zip dist/*"
