--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
 	"scripts": {
 		"start": "snowpack dev",
 		"build": "snowpack build",
+		"build:watch": "snowpack build",
 		"build:clean": "snowpack build --clean",
-		"build:watch": "chokidar \"projects/**/*\"  \"webroot/**/*\" -c \"npm run build\"",
-		"postbuild": "run-s add-version-to-manifest echo:finished",
 		"echo:finished": "echo 'Build finished!'",
 		"generate-dist-zip": "run-s build:clean zip:dist",
 		"add-version-to-manifest": "node -r esm tools/add-version-to-manifest.js",
@@ -16,21 +15,22 @@
 	},
 	"dependencies": {
 		"@bjesuiter/serializr-helpers": "^2.2.1",
-		"@datorama/akita": "^5.3.0",
-		"@material-ui/core": "^4.11.2",
+		"@datorama/akita": "^6.0.0",
+		"@material-ui/core": "^4.11.3",
 		"@material-ui/icons": "^4.11.2",
-		"@material-ui/lab": "^4.0.0-alpha.57",
-		"date-fns": "^2.16.1",
+		"@material-ui/lab": "4.0.0-alpha.57",
+		"date-fns": "^2.17.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"serializr": "^2.0.5"
 	},
 	"devDependencies": {
-		"@snowpack/plugin-react-refresh": "^2.3.9",
-		"@snowpack/plugin-typescript": "^1.1.1",
-		"@types/chrome": "0.0.127",
-		"@types/jest": "^26.0.19",
-		"@types/react": "^17.0.0",
+		"@snowpack/plugin-build-script": "^2.1.0",
+		"@snowpack/plugin-react-refresh": "2.4.0",
+		"@snowpack/plugin-typescript": "^1.2.1",
+		"@types/chrome": "0.0.129",
+		"@types/jest": "^26.0.20",
+		"@types/react": "^17.0.1",
 		"@types/react-dom": "^17.0.0",
 		"@types/snowpack-env": "^2.3.3",
 		"bestzip": "^2.1.7",
@@ -40,8 +40,8 @@
 		"load-json-file": "^6.2.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.2.1",
-		"snowpack": "^2.18.5",
-		"tslib": "^1.14.1",
+		"snowpack": "^3.0.11",
+		"tslib": "^2.1.0",
 		"typescript": "^4.1.3",
 		"write-json-file": "^4.3.0"
 	},
