simplify release scripts

--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
 		"build": "snowpack build",
 		"build:watch": "snowpack build --watch",
 		"build:clean": "snowpack build --clean",
-		"echo:finished": "echo 'Build finished!'",
-		"generate-dist-zip": "run-s build:clean zip:dist",
-		"add-version-to-manifest": "node -r esm tools/add-version-to-manifest.js",
-		"zip:dist": "bestzip deploy.zip dist/*"
+		"zip:dist": "bestzip release.zip dist/*",
+		"pack-release": "run-s build:clean zip:dist"
 	},
 	"dependencies": {
 		"@bjesuiter/serializr-helpers": "^2.2.1",
