--- a/src/webroot/manifest.json
+++ b/src/webroot/manifest.json
@@ -29,6 +29,5 @@
 		"assets/img/*.png",
 		"assets/error-htmls/illegal-or-missing-url.html"
 	],
-	"permissions": ["bookmarks", "notifications", "storage", "tabs"],
-	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+	"permissions": ["bookmarks", "notifications", "storage", "tabs"]
 }
